<resources>
    <string name="app_name">BTJoyStick</string>

    <!--  BluetoothJoystick -->
    <string name="title_connected_to">connected to:</string>
    <string name="title_connecting">connecting</string>
    <string name="title_not_connected">not connected</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth JoyStick.</string>
    <string name="not_connected">You are not connected to a device</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!--  Menu Options -->
    <string name="optConnect">Connect</string>
    <string name="optOptions">Options</string>
    <string name="optAbout">About</string>

    <!--  User Buttons -->
    <string name="btnA_text">A</string>
    <string name="btnB_text">B</string>
    <string name="btnC_text">C</string>
    <string name="btnD_text">D</string>

    <!--  Text Views -->
    <string name="dataL_text">( 0, 0 )</string>
    <string name="dataR_text">( 0, 0 )</string>
    <string name="status_text">C</string>

    <string name="banner_ad_unit_id_yus">ca-app-pub-1002476730485776/5013240549</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>

</resources>
