<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <com.ymsoftlabs.widgets.DualJoystickView
        android:id="@+id/dualjoystickView"
        android:layout_gravity="center_horizontal"
        android:layout_width="fill_parent" android:layout_height="175dp"
        android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >
        <TextView android:id="@+id/txt_dataL"
            android:text="@string/dataL_text"
            android:layout_width="120dp" android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="left" />

        <Button
            android:id="@+id/button_A"
            android:layout_width="90dp"
            android:text="@string/btnA_text"
            android:textSize="24sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp" />

        <Button
            android:id="@+id/button_B"
            android:text="@string/btnB_text"
            android:textSize="24sp"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView android:id="@+id/txt_dataR"
            android:text="@string/dataR_text"
            android:layout_width="120dp" android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <Button
            android:id="@+id/button_C"
            android:text="@string/btnC_text"
            android:textSize="24sp"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp" />

        <Button
            android:id="@+id/button_D"
            android:text="@string/btnD_text"
            android:textSize="24sp"
            android:layout_width="90dp"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" >

        <TextView android:id="@+id/txt_status"
            android:text="@string/status_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content" android:layout_height="wrap_content" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id_yus">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>

</LinearLayout>
